# WindowsToVMProxy

./: CMakeLists.txt  README  config.cfg
inc/: Logger.h  UDPProxy.h
src/: Logger.cpp  Main.cpp  UDPProxy.cpp
